--- a/Setup/Package.wxs
+++ b/Setup/Package.wxs
@@ -1,24 +1,23 @@
 <?define ProductName = "OpenHashTab"?>
-<?define ProductVersion = "3.1.1"?>
-<?define ProductFullVersion = "3.1.1.0"?>
+<!--<?define ProductVersion = "3.1.1"?>-->
 <?define ProductAuthor = "namazso"?>
 <?define ProductHelpLink = "https://github.com/namazso/OpenHashTab"?>
-<?define BuildDirectory32 = "cmake-openhashtab-x86"?>
-<?define AlgorithmsDllsDirectory = "AlgorithmsDlls"?>
+<!--<?define BuildDirectory32 = "cmake-openhashtab-x86"?>-->
+<!--<?define AlgorithmsDllsDirectory = "AlgorithmsDlls"?>-->
 <?define CLSID = "{23B5BDD4-7669-42B8-9CDC-BEEBC8A5BAA9}"?>
 
 <?if $(sys.BUILDARCH) = x64?>
     <?define Win64 = "yes"?>
     <?define ExpectedNativeMachine = "34404"?>
-    <?define BuildDirectory = "cmake-openhashtab-x64"?>
+    <!--<?define BuildDirectory = "cmake-openhashtab-x64"?>-->
 <?elseif $(sys.BUILDARCH) = arm64?>
     <?define Win64 = "yes"?>
     <?define ExpectedNativeMachine = "43620"?>
-    <?define BuildDirectory = "cmake-openhashtab-arm64"?>
+    <!--<?define BuildDirectory = "cmake-openhashtab-arm64"?>-->
 <?else?>
     <?define Win64 = "no"?>
     <?define ExpectedNativeMachine = "332"?>
-    <?define BuildDirectory = "cmake-openhashtab-x86"?>
+    <!--<?define BuildDirectory = "cmake-openhashtab-x86"?>-->
 <?endif?>
 
 <?if $(var.Win64) = "yes"?>
@@ -60,7 +59,7 @@
 
         <MediaTemplate EmbedCab="yes" />
 
-        <Icon Id="icon.ico" SourceFile="OpenHashTab\icon.ico" />
+        <Icon Id="icon.ico" SourceFile="..\OpenHashTab\OpenHashTab\icon.ico" />
         <Property Id="ARPPRODUCTICON" Value="icon.ico" />
 
         <WixVariable Id="WixUILicenseRtf" Value="InstallerLicense.rtf" />
